examples/test/testpolicy15936.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15936
  namespace: namespace274
spec:
  podSelector:
    matchLabels:
      key6: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value11
          key18: value23
      podSelector:
        matchLabels:
          key37: value4
          key25: value21
          key34: value0
